@@ -1,15 +1,14 @@
 package pt.iscte.paddle.model.validation;
 
 import java.util.Collection;
-
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 
 public class AsgSemanticChecks implements ISemanticChecker {
 
 	@Override
 	public Collection<Class<? extends Rule>> getRules() {
-		return ImmutableList.of(
+		return List.of(
 				Args.class,
 				BreakContinueLocation.class,
 				Types.class
